# BibCreate

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  interactive_console_output.xml  pyproject.toml  report.md  requirements.txt  retro.md  run_robot_tests.sh  schema.sql
.github/: ci.yaml
.github/workflows/: ci.yaml
src/: app.py  config.py  db.py  db_helper.py  index.py  routes.py  util.py
src/entities/: reference.py
src/repositories/: citation_repository.py  reference_repository.py
src/static/css/: style.css
src/story_tests/: bibtex.robot  reference..robot  reference.robot  resource.robot  tag.robot
src/templates/: edit_reference.html  index.html  layout.html  new_reference.html
src/tests/: reference_class_test.py  test_book.py  validate_reference_test.py  validate_tag_test.py
