[tool.poetry]
name = "bibcreate"
version = "0.1.0"
description = ""
authors = ["lowdodo <lowdodo@ad.helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.1.0"
robotframework = "^7.1.1"
robotframework-seleniumlibrary = "^6.6.1"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.1"
getenv = "^0.2.0"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
